# qualagent-bridge

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  index.html  pyproject.toml  requirements.txt
src/: App.tsx  app.py
src/agents/: __init__.py  data_processor.py  orchestrator.py  state_handler.py  tool_manager.py  workflow_builder.py
src/agents/tools/: __init__.py  agent_memory.py  document_search.py  generate_insight.py  llm_router.py  sentiment_analysis.py  summarize_memory.py  theme_cluster.py
src/api/: agent-presets.ts  agents.ts  analysis.ts  memories.ts  projects.ts
src/api/api_v1/: api.py
src/components/agents/: agent-preset-selector.tsx
src/components/analysis/: analysis-stream.tsx
src/components/layout/: app-layout.tsx  notifications.tsx  sidebar-nav.tsx
src/core/: config.py  embeddings.py
src/db/: base.py  dependencies.py  init_db.py  models.py
src/mocks/: agent-presets.ts
src/pages/: Agents.tsx  AiProviderSettings.tsx  AnalysisDetail.tsx  Dashboard.tsx  DataManagement.tsx  Help.tsx  Index.tsx  LandingPage.tsx  NewAnalysis.tsx  NewProject.tsx  ProjectDetail.tsx  Projects.tsx  Settings.tsx  Visualizations.tsx
src/schemas/: agent.py  analysis.py  project.py  tool_inputs.py
src/scripts/: optimize_pgvector.py  setup_cache_tables.py
src/services/: agent_service.py  analysis_service.py  analysis_tools.py  cache.py  param_extractor.py  project_service.py
src/tests/: run_validation.py  test_document_search.py  test_param_extractor.py
src/types/: agent-presets.ts
src/utils/: theme.ts  vector_store.py
(+12 files in other folders)
