
[tool.poetry]
name = "qualagents"
version = "0.1.0"
description = "AI-powered qualitative research platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}
langchain = "^0.1.5"
langchain-openai = "^0.0.5"
langgraph = "^0.1.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.25.2"

[tool.poetry.dev-dependencies]
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
